#APPDEV-3179 broken media wrapping fixes
git-svn-id: https://appdevsvn.nj01/appdev/FreshDirect/trunk@25792 842219ff-9341-0410-a943-573460bdd4de

--- a/projects/Media/docroot/assets/css/pdp/accordion.css
+++ b/projects/Media/docroot/assets/css/pdp/accordion.css
@@ -95,12 +95,14 @@
 	padding-left:20px;
 }
 
+.pdp-accordion-item td>strong:first-child,
 .pdp-accordion-item>div>strong:first-child {
 	border:none;
 	padding-top:0;
 	margin-top:0;
 }
 
+.pdp-accordion-item td>strong,
 .pdp-accordion-item>div>strong {
 	padding-top:10px;
 	margin-top:10px;
